--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  background-color: #ffffff;
 }
 /* Body */
 
@@ -24,11 +25,10 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: left;
-}
-.first-part {
+  text-transform: uppercase;
   color: #4d5ae5;
 }
 .second-part {
@@ -46,7 +46,7 @@ body {
 }
 .menu-link-special:hover,
 .menu-link-special:active {
-  color: #4d5ae5;
+  color: #404bbf ;
 }
 .menu-link:hover {
   color: #4d5ae5;
@@ -56,12 +56,15 @@ body {
   text-align: left;
 }
 .contact-menu-link {
-  font-style: normal;
   color: #434455;
 
 }
-.contact-menu-link:hover {
+.contact-menu-link:hover,
+.contact-menu-link:focus {
   color: #404bbf;
+}
+.contact-page {
+  font-style: normal;
 }
 
 /* Nav */
@@ -72,13 +75,17 @@ body {
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
+  letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
+  background-color: #2e2f42;
 }
 
 .hero-button {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   background-color: #4d5ae5;
   color: #ffffff;
 }
@@ -86,16 +93,27 @@ body {
   background-color: #404bbf;
   color: #ffffff;
 }
+.hero-button:focus {
+  background-color: #404BBF;
+}
 /* Title and button */
 
 /* Main section */
+.goals-section {
+  background-color: #F4F4FD
+}
 .goals-title {
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
+  letter-spacing: 0.02em;
   font-weight: 500;
   line-height: 1.2;
   text-align: left;
+  text-transform: capitalize;
   color: #2e2f42;
+}
+.goals-menu {
+  background-color: #FFFFFF;
 }
 
 .goals-text {
@@ -109,6 +127,7 @@ body {
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
+  text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
 }
@@ -117,8 +136,10 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-weight: 500;
+  letter-spacing: 0.02em;
   line-height: 1.2;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
 }
 
@@ -130,11 +151,26 @@ body {
 /* Main section */
 
 /* Footer */
+.footer-section {
+  background-color: #2e2f42;
+}
 .text-footer {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
   text-align: left;
   color: #f4f4fd;
 }
-
+.footer-link{
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: left;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+.footer-second-part {
+  color: #2e2f42;
+}
 /* Footer */
