--- a/css/style.css
+++ b/css/style.css
@@ -46,18 +46,17 @@ body {
 }
 .menu-link-special:hover,
 .menu-link-special:active {
-  color: #404bbf ;
+  color: #404bbf;
 }
 .menu-link:hover {
   color: #4d5ae5;
 }
 .contact-menu {
-  font-family: 'Roboto', sans-serif;;
+  font-family: 'Roboto', sans-serif;
   text-align: left;
 }
 .contact-menu-link {
   color: #434455;
-
 }
 .contact-menu-link:hover,
 .contact-menu-link:focus {
@@ -94,13 +93,13 @@ body {
   color: #ffffff;
 }
 .hero-button:focus {
-  background-color: #404BBF;
+  background-color: #404bbf;
 }
 /* Title and button */
 
 /* Main section */
 .goals-section {
-  background-color: #F4F4FD
+  background-color: #f4f4fd;
 }
 .goals-title {
   font-family: 'Roboto', sans-serif;
@@ -113,14 +112,16 @@ body {
   color: #2e2f42;
 }
 .goals-menu {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .goals-text {
   font-family: 'Roboto', sans-serif;
   text-align: left;
 }
-
+.team-section {
+  background-color: #F4F4FD;
+}
 .staff-title {
   font-family: 'Roboto', sans-serif;
   font-size: 36px;
@@ -148,6 +149,34 @@ body {
   line-height: 1.5;
   text-align: center;
 }
+/* 3rd section*/
+.portfolio-section {
+  background-color: #ffffff;
+}
+.portfolio-title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+.portfolio-name {
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #2e2f42;
+}
+.portfolio-mathod {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.02em;
+  text-align: left;
+}
+
 /* Main section */
 
 /* Footer */
@@ -160,7 +189,7 @@ body {
   text-align: left;
   color: #f4f4fd;
 }
-.footer-link{
+.footer-link {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
