--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
   text-transform: capitalize;
   color: #2e2f42;
 }
-.staff-menu {
+.staff-menu-item {
   background-color: #ffffff;
 }
 .goals-text {
