--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   text-align: left;
+  color: #2e2f42;
 }
 .menu-link-special {
   color: #2e2f42;
