--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
 .second-part {
   color: #2e2f42;
 }
+
 /* Logo */
 
 /* Nav */
@@ -168,7 +169,7 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
-/* Portfolio section */
+tfolio section */
 /* Main section */
 
 /* Footer */
