--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
-tfolio section */
+/* Portfolio section */
 /* Main section */
 
 /* Footer */
