--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ body {
 .second-part {
   color: #2e2f42;
 }
+.contact-page {
+  font-style: normal;
+}
 
 /* Logo */
 
@@ -175,6 +178,7 @@ body {
 }
 .footer-link {
   font-family: 'Raleway', sans-serif;
+  font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
